--- a/contattaci.html
+++ b/contattaci.html
@@ -64,7 +64,7 @@
 
                                 </div>
                                 <div class="form_div ">
-                                    <input type="text" name="Your Email" id="Your Email" placeholder="Your Email"
+                                    <input type="text" name="Your Email" id="Your-Email" placeholder="Your Email"
                                         autocomplete="off">
                                     <input type="text" name="Subj" id="Subj" placeholder="Subject" autocomplete="off">
                                 </div>
@@ -72,7 +72,7 @@
                                     <textarea id="w3review" name="w3review" rows="4" cols="50"
                                         placeholder=" Message"></textarea>
                                 </div>
-                                <input type="submit" name="" id="sub" value="submit">
+                                <input type="submit"  id="sub" value="submit">
                             </form>
                         </div>
                     </div>
