--- a/casino-de-la-vallee.html
+++ b/casino-de-la-vallee.html
@@ -6,6 +6,7 @@
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/logo-fav.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -20,7 +21,7 @@
                 <div class="container">
                     <nav class="site-navbar">
                         <a href="index.html" class="site-logo">
-                            <img src="img/logo.png" alt="logo">
+                            <img src="img/LOGO-NEW.png" alt="logo">
                         </a>
                         <ul>
                             <li><a href="index.html" class="active">Casa</a></li>
