--- a/casino-municipale-di-sanremo.html
+++ b/casino-municipale-di-sanremo.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="img/logo-fav.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -201,7 +202,7 @@
                                 <li><a href="termini.html">Terms </a></li>
                                 <li><a href="politica-sulla-riservatezza.html">Privacy Policy </a></li>
                             </ul>
-                            </ul>
+
                         </div>
                     </div>
                     <div class="col-lg-4">
