--- a/casino-di-venezia.html
+++ b/casino-di-venezia.html
@@ -4,6 +4,7 @@
     <title>casino-di-venezia</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/logo-fav.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
