--- a/contattaci.html
+++ b/contattaci.html
@@ -5,6 +5,7 @@
     <title>Contattaci</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/logo-fav.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -23,7 +24,7 @@
                         </a>
                         <ul>
                             <li><a href="index.html">Casa</a></li>
-                            <li><a href="">Chi siamo </a></li>
+                            <li><a href="chi-siamo.html">Chi siamo </a></li>
                             <li><a href="contattaci.html" class="active">Contattaci </a></li>
                         </ul>
                         <!-- nav-toggler for mobile version only -->
@@ -60,13 +61,13 @@
                         <div class="form-wrapper">
                             <form action="#">
                                 <div class="form_div">
-                                    <input type="text" name="user" id="user" placeholder="Your Name" autocomplete="off">
+                                    <input type="text" name="user" id="user" placeholder="Your Name" autocomplete="off" required>
 
                                 </div>
                                 <div class="form_div ">
                                     <input type="text" name="Your Email" id="Your-Email" placeholder="Your Email"
-                                        autocomplete="off">
-                                    <input type="text" name="Subj" id="Subj" placeholder="Subject" autocomplete="off">
+                                        autocomplete="off" required>
+                                    <input type="text" name="Subj" id="Subj" placeholder="Subject" autocomplete="off" required>
                                 </div>
                                 <div class="text_a">
                                     <textarea id="w3review" name="w3review" rows="4" cols="50"
