--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -39,7 +39,7 @@
     </header>
     <!-- Header section end  here -->
     <!-- Banner section start form here -->
-    <section class="contattaci">
+    <section class="contattaci about">
         <div class="container">
             <div class="bnr-text">
                 <h2>Chi siamo</h2>
