--- a/casino-perla.html
+++ b/casino-perla.html
@@ -170,7 +170,7 @@
                     <div class="col-lg-4">
                         <div class="box-section">
                             <figure>
-                                <img src="img/Conclusion-2.avif" alt="">
+                                <img src="img/Border.avif" alt="">
                             </figure>
                             <div class="box-text">
                                 <h4>Località di confine e accessibilità</h4>
