--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="box-section">
                             <figure>
                                 <a href="casino-perla.html">
-                                    <img src="img/Casino3.jpg" alt="">
+                                    <img src="img/Casino4.webp" alt="">
                                 </a>
                             </figure>
                             <div class="box-text">
