--- a/casino-di-venezia.html
+++ b/casino-di-venezia.html
@@ -37,7 +37,7 @@
     </header>
     <!-- Header section end  here -->
     <!-- Banner section start form here -->
-    <section class="casino-inner-page">
+    <section class="casino-inner-page ovenezia">
         <div class="container">
             <div class="bnr-text">
                 <h2>Casino di Venezia </h2>
