--- a/casino-municipale-di-sanremo.html
+++ b/casino-municipale-di-sanremo.html
@@ -39,7 +39,7 @@
     </header>
     <!-- Header section end  here -->
     <!-- Banner section start form here -->
-    <section class="casino-inner-page">
+    <section class="casino-inner-page municipale">
         <div class="container">
             <div class="bnr-text">
                 <h2>Casinò Municipale di Sanremo </h2>
