--- a/casino-de-la-vallee.html
+++ b/casino-de-la-vallee.html
@@ -21,7 +21,7 @@
                 <div class="container">
                     <nav class="site-navbar">
                         <a href="index.html" class="site-logo">
-                            <img src="img/LOGO-NEW.png" alt="logo">
+                            <img src="img/logo.png" alt="logo">
                         </a>
                         <ul>
                             <li><a href="index.html" class="active">Casa</a></li>
