--- a/casino-perla.html
+++ b/casino-perla.html
@@ -40,7 +40,7 @@
     </header>
     <!-- Header section end  here -->
     <!-- Banner section start form here -->
-    <section class="casino-inner-page">
+    <section class="casino-inner-page perla">
         <div class="container">
             <div class="bnr-text">
                 <h2>Casinò Perla
