--- a/casino-di-venezia.html
+++ b/casino-di-venezia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>casino-di-venezia</title>
+    <title>Casino-di-venezia</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/logo-fav.png" type="image/x-icon">
