--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -72,6 +72,12 @@
                     tendenze locali, garantendo che i nostri contenuti siano adattati alle esigenze del nostro pubblico
                     italiano.
                 </p>
+
+                <p><span>Copertura completa</span>
+                    dalle strategie di scommesse sportive e analisi delle quote alle recensioni dettagliate dei casinò
+                    locali, copriamo tutto. Il nostro obiettivo è fornire una destinazione unica per tutto ciò che devi
+                    sapere sulle scommesse in Italia.
+                </p>
                 <p> <span>Coinvolgimento della comunità :</span> Scommesses.com è più di un sito web; è una comunità di
                     persone che la
                     pensano allo stesso modo e che condividono la passione per le scommesse. Unisciti ai nostri forum,
