--- a/contattaci.html
+++ b/contattaci.html
@@ -61,19 +61,21 @@
                         <div class="form-wrapper">
                             <form action="#">
                                 <div class="form_div">
-                                    <input type="text" name="user" id="user" placeholder="Your Name" autocomplete="off" required>
+                                    <input type="text" name="user" id="user" placeholder="Your Name" autocomplete="off"
+                                        required>
 
                                 </div>
                                 <div class="form_div ">
                                     <input type="text" name="Your Email" id="Your-Email" placeholder="Your Email"
                                         autocomplete="off" required>
-                                    <input type="text" name="Subj" id="Subj" placeholder="Subject" autocomplete="off" required>
+                                    <input type="text" name="phone" id="phone" placeholder="Phone Number"
+                                        autocomplete="off" required>
                                 </div>
                                 <div class="text_a">
                                     <textarea id="w3review" name="w3review" rows="4" cols="50"
                                         placeholder=" Message"></textarea>
                                 </div>
-                                <input type="submit"  id="sub" value="submit">
+                                <input type="submit" id="sub" value="submit">
                             </form>
                         </div>
                     </div>
@@ -81,12 +83,12 @@
                         <div class="contact-item text-center">
                             <div class="contact-thumb">
                                 <img src="img/mail.png" alt="">
-                            </div> 
+                            </div>
                             <div class="contact-content">
                                 <h6 class="title">INVIA UNA EMAIL</h6>
                                 <p>info@scommesses.com
                                 </p>
-                            </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
