--- a/politica-sulla-riservatezza.html
+++ b/politica-sulla-riservatezza.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>politica sulla riservatezza</title>
+    <title>Politica sulla riservatezza</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
