--- a/casino-perla.html
+++ b/casino-perla.html
@@ -225,11 +225,10 @@
                             <h3>menù</h3>
                             <ul>
                                 <li><a href="index.html" class="active">Casa</a></li>
-                                <li><a href="">Casinos</a></li>
-                                <li><a href="">About us </a></li>
-                                <li><a href="">Contact us </a></li>
-                                <li><a href="">Terms </a></li>
-                                <li><a href="">Privacy Policy </a></li>
+                                <li><a href="chi-siamo.html">Chi siamo</a></li>
+                                <li><a href="contattaci.html">Contattaci </a></li>
+                                <li><a href="termini.html">Terms </a></li>
+                                <li><a href="politica-sulla-riservatezza.html">Privacy Policy </a></li>
                             </ul>
                         </div>
                     </div>
