--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -24,8 +24,8 @@
                         </a>
                         <ul>
                             <li><a href="index.html">Casa</a></li>
-                            <li><a href="chi-siamo.html">Chi siamo </a></li>
-                            <li><a href="contattaci.html" class="active">Contattaci </a></li>
+                            <li><a href="chi-siamo.html" class="active">Chi siamo </a></li>
+                            <li><a href="contattaci.html" >Contattaci </a></li>
                         </ul>
                         <!-- nav-toggler for mobile version only -->
                         <button class="nav-toggler">
