--- a/casino-di-venezia.html
+++ b/casino-di-venezia.html
@@ -21,7 +21,7 @@
                             <img src="img/logo.png" alt="logo">
                         </a>
                         <ul>
-                            <li><a href="index.html" class="active">Casa</a></li>
+                            <li><a href="index.html" >Casa</a></li>
                             <li><a href="chi-siamo.html">Chi siamo </a></li>
                             <li><a href="contattaci.html">Contattaci </a></li>
                         </ul>
