--- a/casino-perla.html
+++ b/casino-perla.html
@@ -224,7 +224,7 @@
                         <div class="footer-menu">
                             <h3>menù</h3>
                             <ul>
-                                <li><a href="index.html" class="active">Casa</a></li>
+                                <li><a href="index.html">Casa</a></li>
                                 <li><a href="chi-siamo.html">Chi siamo</a></li>
                                 <li><a href="contattaci.html">Contattaci </a></li>
                                 <li><a href="termini.html">Terms </a></li>
