--- a/contattaci.html
+++ b/contattaci.html
@@ -82,7 +82,8 @@
                     <div class="col-lg-6">
                         <div class="contact-item text-center">
                             <div class="contact-thumb">
-                                <img src="img/mail.png" alt="">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+
                             </div>
                             <div class="contact-content">
                                 <h6 class="title">INVIA UNA EMAIL</h6>
