--- a/contattaci.html
+++ b/contattaci.html
@@ -59,7 +59,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-wrapper">
-                            <form action="#">
+                            <form action="">
                                 <div class="form_div">
                                     <input type="text" name="user" id="user" placeholder="Your Name" autocomplete="off"
                                         required>
