--- a/casino-municipale-di-sanremo.html
+++ b/casino-municipale-di-sanremo.html
@@ -199,8 +199,8 @@
                                 <li><a href="index.html" class="active">Casa</a></li>
                                 <li><a href="chi-siamo.html">Chi siamo</a></li>
                                 <li><a href="contattaci.html">Contattaci </a></li>
-                                <li><a href="termini.html">Terms </a></li>
-                                <li><a href="politica-sulla-riservatezza.html">Privacy Policy </a></li>
+                                <li><a href="termini.html">Termini </a></li>
+                                <li><a href="politica-sulla-riservatezza.html">politica-sulla-riservatezza </a></li>
                             </ul>
 
                         </div>
