--- a/casino-perla.html
+++ b/casino-perla.html
@@ -224,11 +224,11 @@
                         <div class="footer-menu">
                             <h3>menù</h3>
                             <ul>
-                                <li><a href="index.html">Casa</a></li>
+                                <li><a href="index.html" class="active">Casa</a></li>
                                 <li><a href="chi-siamo.html">Chi siamo</a></li>
                                 <li><a href="contattaci.html">Contattaci </a></li>
-                                <li><a href="termini.html">Terms </a></li>
-                                <li><a href="politica-sulla-riservatezza.html">Privacy Policy </a></li>
+                                <li><a href="termini.html">Termini </a></li>
+                                <li><a href="politica-sulla-riservatezza.html">politica-sulla-riservatezza </a></li>
                             </ul>
                         </div>
                     </div>
