--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header section start form here -->
-    <header class="page-header">
+    <header class="page-header  mobile_header">
         <!-- site-navbar start -->
         <div class="navigtion">
             <div class="navbar-area">
