--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://spng.servclick1move.com/?mid=90921_697941" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                      <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.9</strong>
@@ -229,7 +229,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://media.toxtren.com/redirect.aspx?pid=280740&bid=2069&lpid=278" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.9</strong>
@@ -260,10 +260,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://awbba.zetcasino.com/redirect.aspx?pid=1372070&bid=7371" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.8</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -292,10 +292,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://media.hellpartners.com/redirect.aspx?pid=28203&bid=1482&lpid=46" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.8</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -323,10 +323,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://media.strongaffiliates.com/redirect.aspx?pid=1372069&bid=7486" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.7</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -355,10 +355,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://lunubetplay.com/j658e3006" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.7</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -387,10 +387,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://bnk.servclick1move.com/?mid=90921_691729" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.6</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -418,10 +418,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://awbba.zetcasino.com/redirect.aspx?pid=1372071&bid=1663" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.6</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -450,10 +450,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://rbn.servclick1move.com/?mid=90921_691721" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.5</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
@@ -481,10 +481,10 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://welcome.toptrendyinc.com/redirect.aspx?pid=82212&bid=1518&lpid=551" target="blank">
-                      <img src="https://www.sportwayz.com/uploads/images/tonybet.png">
+                        <img src="" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
-                      Punto <strong>9.9</strong>
+                      Punto <strong>9.5</strong>
                     </span>
                     <span class="tbuser-rating ids">
                       <span class="rateit-now">Valutarlo! (757)</span>
