--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="col-12">
           <div class="brand-table">
             <div class="abt-cols">
-              <h2 class="text-center pb-3 coltitle" data-fontsize="20" data-lineheight="24">The Best Sportsbooks in Canada 2023</h2>
+              <h2 class="text-center pb-3 coltitle" data-fontsize="20" data-lineheight="24">I migliori siti scommesse Italia</h2>
             </div>
             <table class="table brand-table-new">
               <tbody>
@@ -510,6 +510,11 @@
                 
               </tbody>
             </table>
+            <div class="paragraph">
+          <p>Noi di Scomesses siamo specializzati nel offrirti i migliori siti di scommesse in Italia. Tutti i bookmaker sono stati scelti con perizia e
+             ti offrono una vasta gamma di eventi sportivi, bonus sulle scommesse e le migliori quote. Iscriviti oggi per ottenere un bonus esclusivo e iniziare 
+             il tuo viaggio nelle scommesse.</p>
+            </div>
           </div>
         </div>
       </div>
