--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://spng.servclick1move.com/?mid=90921_697941" target="blank">
-                      <img src="" alt="img">
+                      <img src="img/spinanga.jpg" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.9</strong>
@@ -229,7 +229,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://media.toxtren.com/redirect.aspx?pid=280740&bid=2069&lpid=278" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/20bet_tuf.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.9</strong>
@@ -260,7 +260,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://awbba.zetcasino.com/redirect.aspx?pid=1372070&bid=7371" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/quickwin.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.8</strong>
@@ -292,7 +292,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://media.hellpartners.com/redirect.aspx?pid=28203&bid=1482&lpid=46" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/ivibet.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.8</strong>
@@ -323,7 +323,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://media.strongaffiliates.com/redirect.aspx?pid=1372069&bid=7486" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/powbet.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.7</strong>
@@ -355,7 +355,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://lunubetplay.com/j658e3006" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/lunabets.jpg" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.7</strong>
@@ -387,7 +387,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://bnk.servclick1move.com/?mid=90921_691729" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/Bankonbet.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.6</strong>
@@ -418,7 +418,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://awbba.zetcasino.com/redirect.aspx?pid=1372071&bid=1663" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/fezbet.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.6</strong>
@@ -450,7 +450,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://rbn.servclick1move.com/?mid=90921_691721" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/robpt_tuf.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.5</strong>
@@ -481,7 +481,7 @@
                  <tr>
                   <td class="brand-logo" style="width: 50%;">
                     <a href="https://welcome.toptrendyinc.com/redirect.aspx?pid=82212&bid=1518&lpid=551" target="blank">
-                        <img src="" alt="img">
+                        <img src="img/22bet_tuf.png" alt="img">
                     </a>
                     <span class="mob-pro-score-main">
                       Punto <strong>9.5</strong>
